Fixed start and end points in generated drumkits.